# inter-comm

./: .pylintrc  Pipfile  README.md  project-words.txt  pyproject.toml  requirements.txt
inter_comm/: settings.py  utils.py
inter_comm/apis/: __init__.py  accounting.py  crm.py  disburse.py  gl.py  identity.py  unr.py
