[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "inter-comm"
version = "{{VERSION_PLACEHOLDER}}"
authors = [
  { name="Abhishek Sharma", email="abhishm20@gmail.com" },
]
description = "A small Django DRF extension library which includes some useful utilities, APIs, Serializers and Services."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''


[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
default_section = "THIRDPARTY"
known_first_party = []
known_third_party = ["django", "requests"]
